package com.example.order_service.entity;

public enum OrderStatus {
    CREATED,
    COOKING,
    ON_THE_WAY,
    DELIVERED,
    CANCELED
}
